修改gulp配置文件 index.html模板 删除不必要的依赖

--- a/generators/app/templates/index.html
+++ b/generators/app/templates/index.html
@@ -61,7 +61,7 @@
       }
   });
   </script>
-  <!-- build:css ./style/combined.css -->
+  <!-- build:css ./styles/combined.css -->
 
   <!-- endbuild -->
 </head>
